# vnc-agent-bridge

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PHASE_3_SUMMARY.md  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/instructions/: memory-management.instructions.md
.github/workflows/: tests.yml
docs/api/: clipboard.md  connection.md  framebuffer.md  keyboard.md  mouse.md  screenshot.md  scroll.md  video.md
docs/guides/: advanced.md  advanced_v02.md  clipboard_management.md  getting_started.md  keyboard_input.md  mouse_control.md  screenshot_capture.md  scrolling.md  video_recording.md  websocket_connections.md
docs/plan/: API_SPECIFICATION.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  PLAN_SUMMARY.md  PROJECT_PLAN.md  QUICK_REFERENCE.md  README.md  TECHNICAL_DESIGN.md  V0.2.0_PLAN.md  V0.3.0_IMPLEMENTATION_CHECKLIST.md  V0.3.0_PLAN.md  V0.3.0_SUMMARY.md  V0.3.0_TECHNICAL_SPEC.md  VERSION_ROADMAP.md
examples/: README.md  advanced_workflow.py  ai_agent_example.py  basic_usage.py  clipboard_usage.py  comprehensive_test.py  error_handling.py  full_workflow_v02.py  screenshot_basic.py  screenshot_regions.py  video_recording.py  vnc_diagnostic.py  websocket_usage.py
scripts/: README.md  get_websocket_ticket.py  tcp_comprehensive_test.py  tcp_vnc_diagnostic.py  test_clipboard.py  test_screenshot.py  test_video.py  websocket_comprehensive_test.py  websocket_test_clipboard.py  websocket_test_screenshot.py  websocket_test_video.py  websocket_vnc_diagnostic.py
tests/: conftest.py  test_clipboard.py  test_connection.py  test_framebuffer.py  test_integration.py  test_keyboard.py  test_mouse.py  test_screenshot.py  test_scroll.py  test_tcp_connection.py  test_video.py  test_websocket_connection.py
vnc_agent_bridge/: __init__.py
vnc_agent_bridge/core/: __init__.py  base_connection.py  bridge.py  clipboard.py  connection.py  connection_tcp.py  connection_websocket.py  framebuffer.py  keyboard.py  mouse.py  screenshot.py  scroll.py  video.py
vnc_agent_bridge/exceptions/: __init__.py
vnc_agent_bridge/types/: __init__.py  common.py
