[metadata]
name = vnc-agent-bridge
version = 0.1.0
description = Open-source Python package for AI agents to interact with VNC servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ganzzi/vnc-agent-bridge
author = Ganzzi
author_email = boinguyen9701@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
keywords = vnc, automation, ai, agent, remote-control
project_urls =
    Homepage = https://github.com/Ganzzi/vnc-agent-bridge
    Repository = https://github.com/Ganzzi/vnc-agent-bridge
    Issues = https://github.com/Ganzzi/vnc-agent-bridge/issues
    Documentation = https://github.com/Ganzzi/vnc-agent-bridge#readme

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = vnc_agent_bridge*

[options.package_data]
vnc_agent_bridge = py.typed